v3.4.9 (XXXX-XX-XX)
-------------------

* Harden database creation against spurious "duplicate name" errors that
  were caused by other parallel operations lazily creating required
  system collections in the same database.

* Fixed the removal (including a collection drop) of an orphanCollection from a
  graph definition when using the arango shell. The boolean flag whether to drop
  the collection or not was not transferred properly.

* Fixed internal issue #633: made ArangoSearch functions BOOST, ANALYZER, MIN_MATCH
  callable with constant arguments. This will allow running queries where all arguments
  for these functions are deterministic and do not depend on loop variables.

* Added UI support to create documents in a collection using smartGraphAttribute
  and/or smartJoinAttribute.

* Add --server.statistics-history flag to allow disabling of only the historical
  statistics. Also added rocksdbengine.write.amplification.x100 statistics
  for measurement of compaction option impact. Enabled non-historical
  statistics for agents.

* Fixed output of `_listObjects()` function of "general-graph" and "smart-graph" 
  modules, which did not print the `_id` values of the return graphs correctly.

* Fixed undefined behavior in single server mode when trying to create a smart 
  graph.

* Add count of objects to latency reporting in arangoimport.

* Fixed adding an orphan collections as the first collection in a SmartGraph.

* The graph viewer of the web interface now tries to find a vertex document of
  all available vertex collections before it aborts.
  
* Bugfix: Save distinct WAL ticks for multiple replication clients from the same
  server. Also, when a follower is added for synchronous replication, the WAL
  tick held by the client is freed immediately, rather than waiting for a
  timeout.

  The corresponding APIs get a new parameter `syncerId`, which, if given,
  supersedes `serverId`. This affects the routes /_api/wal/tail,