@@ -1,6 +1,9 @@
 v3.4.9 (XXXX-XX-XX)
 -------------------
 
+* The keep alive timeout specified via --http.keep-alive-timeout is now being
+  honored.
+
 * Harden database creation against spurious "duplicate name" errors that
   were caused by other parallel operations lazily creating required
   system collections in the same database.
@@ -148,8 +151,8 @@ v3.4.8 (2019-09-09)
 
 * Prevent rare cases of duplicate DDL actions being executed by Maintenance.
 
-* Coordinator code was reporting rocksdb error codes, but not the associated detail message.
-  Corrected.
+* Fixed coordinator code that was reporting rocksdb error codes, but not the associated detail
+  message.
 
 * Fixed some error reporting and logging in Maintenance.
 
